feat: T39 add structured JSON logging across all services
Every Spring Boot service now emits one-JSON-per-line structured logs
to stdout, suitable for ingestion by ELK / Loki / Grafana.

* logstash-logback-encoder pulled in via the version catalog and
  re-exported from `common` so each service receives it transitively.
* Shared appender definition in
  `common/src/main/resources/logback-shared.xml`:
   - `local` profile keeps the human-readable pattern for IDE work.
   - everything else emits JSON via LogstashEncoder with explicit field
     names; the encoder's defaults (@version, tags, logback context,
     full MDC) are turned off so only fields the system actually
     produces appear in the output.
   - root level controlled by env var `LOG_LEVEL` (default INFO).
* Each service has a tiny `logback-spring.xml` that declares
  `serviceName` from `spring.application.name` and includes the
  shared file.
* New `UserIdMdcFilter` in `common` pushes the gateway-provided
  `X-User-Id` header into MDC under `userId`, alongside the existing
  `requestId` slot populated by `RequestIdMdcFilter`. Registered via
  `HvostidErrorAutoConfiguration` so backend services get it without
  explicit bean wiring.
* `common/build.gradle.kts`: introduce a `compileOnlyAndTest` shared
  bucket so spring-web / webmvc / security-core / jakarta-servlet-api
  are declared exactly once (resolves the "declared multiple times"
  warnings) while still flowing onto both the production compileOnly
  classpath and the test classpath.
* README + README.ru: new "Logging / Логирование" section describing
  the JSON shape, the `local` profile, the `LOG_LEVEL` env var, how to
  filter by `requestId` from the CLI / Grafana / Kibana, and what must
  never be logged.

Closes #60